# AP-Doc_B-IT-ImTech

./: .gitignore
Data Network/: Cisco Commands.docx
Database/: Deel 5 Oefenbundel 2.sql  Deel 5 Oefenbundel 3.sql  Deel 5 Oefenbundel 4.sql  Deel 5 Oefenbundel 5 idk.sql  Deel 6 Oefenbundel 1.sql  Deel 6 Oefenbundel 2.sql  Deel 6 Oefenbundel Voorbeeld.sql
Digital fundementals/Multisim/: labo1-1.ms14  labo1-2.ms14  labo2-1.ms14  labo3-1.ms14
Discover IT/: Les 13.10 Ethiek Five-Step Ethical Decision.txt  professionele comm les week 4.docx
Sem 1/Business processes/: BP_Van Den Eynde Cas_Van der Heyden Christophe.PDF.docx
Sem 1/Database/: Samenvatting.docx
Sem 1/Database/Examen/: databases.drawio  databases.sql
Sem 1/Database/sql's/: 3.1.sql  Deel 4 Oefenbundel.sql  Deel 5 Oefenbundel 1.sql  Deel 7 Oefenbundel 1.sql  Deel 8 Oefenbundel 1.sql  Deel 8 Oefenbundel 2.sql
Sem 1/Discover IT/: Enquete LEMO.docx  Les 13.10 Ethiek hoe omgaan met ethiek.txt
Sem 1/Programming Principles/Santa's Helper/: Santa's Helper.sln
Sem 2/Analyse/: .$Activity diagram.drawio.bkp  .$Use cases.drawio.bkp  Activity diagram.drawio  Use cases.drawio
Sem 2/Analyse/Analysis 2026- Bibliotheek/: Analysis 2026- Bibliotheek.drawio
Sem 2/C++ Programming/labo3/: CMakeLists.txt  main.cpp
Sem 2/C++ Programming/labo4/: CMakeLists.txt  Hero.cpp  Hero.h  Monster.cpp  Monster.h  Scientist.cpp  Scientist.h  main.cpp
Sem 2/C++ Programming/untitled1/: Bouncer.cpp  Bouncer.h  CMakeLists.txt  KeyControllerInstructor.cpp  KeyControllerInstructor.h  Starter.cpp  Starter.h  main.cpp
Sem 2/Immersive Visuals/Blender/: Brandkraan.blend  Brandkraan.blend1  BuildingFold.blend  KistAnimation.blend  Lichtpaal polly (omgevallen).blend  Lichtpaal polly (omgevallen).blend1  Pylon.blend  RobotArm.blend  Texture Test.blend  Texture Test.blend1  Verkeersbord.blend  Vuilbak poly.blend  Vuilnisbak.blend  Vuilnisbak.blend1
Sem 2/Immersive Visuals/industrial-scene/: icon.svg.import  project.godot
Sem 2/OOP/h9/: h9.sln
Sem 2/Web Programming/: Commando's voor ts.md
Sem 2/Web Programming/Demo Vito/: index.html  package-lock.json  (+1 more)
(+285 files in other folders)
